--- a/_config.yml
+++ b/_config.yml
@@ -114,6 +114,15 @@ share-links-active:
 
 # Fill in your Google Analytics ID to track your website using GA
 #google_analytics: "UA-109208159-1"
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109208159-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-109208159-1');
+</script>
 
 # Google Tag Manager ID
 #gtm: ""
