--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Data Scientist | Quantitative Analysis
+title: Data Scientist
 
 # Short description of your site
-description: MBA finance 
+description: MBA finance and MS Data Science
 
 # --- Navigation bar options --- #
 
